Styled main button & fixed some spacing issues
Next
- sort out how to change the styling after hitting generate text button
(I added a padding style to the lorem ipsum text box

--- a/SASS/jhStyle2.scss
+++ b/SASS/jhStyle2.scss
@@ -83,7 +83,7 @@ h2 {
 #textRadio {
   width: 75%;
   margin-left: auto;
-  margin-right: auto;
+  //margin-right: auto;
   text-align: center;
 }
 
@@ -125,8 +125,13 @@ h2 {
   clear: both;
 }
 
-#textRadio, #generateButton {
+#textRadio {
   padding-top: .5em;
+}
+
+#generateButton {
+  padding-top: 1.5em;
+  padding-bottom: 1.5em;
 }
 
 // where the lorem ipsum goes
@@ -134,6 +139,7 @@ h2 {
 #loremIpsumBox {
 	background-color: white;
 	color: gray;
+	padding: 0;
 }
 
 // drop down menu
@@ -145,6 +151,8 @@ h2 {
   width: 240px;
   margin: 20px;
   color: #fff !important;
+  font-family: $font-stack;
+  font-size: 1em;
 }
 
 .semi-square {
@@ -156,4 +164,23 @@ h2 {
 
 .pink {
   background-color: $pink-color;
+}
+
+// generate text button
+
+#buttonIpsum {
+  -webkit-border-radius: 5;
+  -moz-border-radius: 5;
+  border-radius: 5px;
+  color: #ffffff;
+  font-family: $font-stack;
+  background: $pink-color;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+  font-size: 1em;
+}
+
+#buttonIpsum:hover {
+  background: #de005d;
+  text-decoration: none;
 }
